--- a/css/styles.css
+++ b/css/styles.css
@@ -488,6 +488,56 @@ progress {
   display: none !important;
 }
 
+
+
+
+
+
+
+
+
+
+html {
+    scroll-behavior: smooth;
+}
+.social-icon:hover {
+    transform: scale(1.1);
+    color: #007bff; /* Cambia el color */
+    transition: transform 0.3s ease, color 0.3s ease;
+}
+.typewriter h1 {
+    overflow: hidden;
+    border-right: .15em solid orange;
+    white-space: nowrap;
+    margin: 0 auto;
+    letter-spacing: .15em;
+    animation: typing 3.5s steps(40, end), blink-caret .75s step-end infinite;
+}
+@keyframes typing {
+    from { width: 0; }
+    to { width: 100%; }
+}
+@keyframes blink-caret {
+    from, to { border-color: transparent; }
+    50% { border-color: orange; }
+}
+.parallax {
+    background-image: url('assets/img/background.jpg');
+    height: 500px; 
+    background-attachment: fixed;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+
+
+
+
+
+
+
+
+
 .lead {
   font-size: 1.25rem;
   font-weight: 300;
