--- a/css/styles.css
+++ b/css/styles.css
@@ -11037,7 +11037,7 @@ li:hover{
     50% { border-color: orange; }
 }
 
-.typewriter h1 {
+.typewriter {
     overflow: hidden;
     border-right: .15em solid orange;
     white-space: nowrap;
